--- a/gapt_client/index.html
+++ b/gapt_client/index.html
@@ -1,16 +1,3 @@
-<?php
-
-	error_reporting(E_ALL);
-	ini_set('display_errors',1);
-	require_once 'ApiCaller.php';
-	
-	if (isset($_GET['submit'])) {
-		$search_param = strip_tags($_GET['search_param']);
-    	$apicaller = new ApiCaller("http://localhost:5000/api/0.1/json/$search_param");
-    	$cases = $apicaller->sendRequest()['response'];
-    }
-
-?>
 <!DOCTYPE html>
 <html>
 	<head>
@@ -43,7 +30,7 @@
 	    <div class="container">
 	        <div class="row">
 	            <div class="col-xs-8 col-xs-offset-2">
-	            <form name="input" action="index.php" method="get">
+	            <form name="input" action="#" method="get">
 					<div class="input-group">
 						<div class="input-group-btn search-panel">
 							<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
@@ -56,11 +43,7 @@
 							  <li><a href="#judge">Judge</a></li>
 							</ul>
 						</div>
-						<input type="hidden" name="search_param" value="all" id="search_param" />         
 						<input type="text" id="search_bar" class="form-control" name="param" placeholder="Search term..." />
-						<span class="input-group-btn">
-							<button class="btn btn-default" type="submit" name="submit"><span class="glyphicon glyphicon-search"></span></button>
-						</span
 					</div>
 				</form>
 				</div>
@@ -72,58 +55,24 @@
 	          <h1>Result</h1>
 	    </div>
 
-        <?php if(count($cases)===0): ?>
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6"><h3>No Cases Found </h3> </div>
-                <div class="col-md-3"></div>
-            </div>
-        <?php endif; ?>
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6"><h3>No Cases Found</h3></div>
+            <div class="col-md-3"></div>
+        </div>
+
         <div class="container">
 			<h2>Normal</h2>
 			<div class="row form-group product-chooser">
 				<div class="visualContainer">
-					<svg id="visual">
-
-					</svg>
+					<svg id="visual"></svg>
 				</div>
-		
-					<?php
-						foreach($cases as $case_obj) {
-							if(isset($case_obj['pdf'])){
-								$link = "http://www.justiceservices.gov.mt/courtservices/Judgements/" . $case_obj['pdf'];
-							} else {
-								$link = "#";
-							}
-					?>
-
-						<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-							<div class="product-chooser-item selected">
-								<div class="col-xs-8 col-sm-8 col-md-12 col-lg-12">
-									<span class="title"><?php echo $case_obj['reference']; ?></span>
-									<b>Date: </b><span class="description"><?php echo $case_obj['date']; ?></span><br>
-									<b>Court: </b><span class="description"><?php echo $case_obj['court_name']; ?></span><br>
-									<b>Judge: </b><span class="description"><?php echo $case_obj['judge']; ?></span><br>
-									<b>Prosecutor: </b><span class="description"><?php echo $case_obj['prosecutor']; ?></span><br>
-									<b>Defendant: </b><span class="description"><?php echo $case_obj['defendant']; ?></span><br>
-									<br><br>
-										
-									<a href="<?php echo $link; ?>" <img src="pdf-download.png" height="50px" width="200px"/></a>
-								
-									<input type="radio" name="product" value="mobile_desktop" checked="checked">
-								</div>
-								<div class="clear"></div>
-							</div>
-						</div>
-					<?php } ?>
 			</div>
 		</div>		
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.5.4/bootstrap-select.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
         <script src="base.js"></script>    
     </body>
-</html>    
- 
+</html>
