--- a/gapt_client/index.html
+++ b/gapt_client/index.html
@@ -10,7 +10,7 @@
 	    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/css/base/jquery-ui.css" type="text/css" />
 	</head>
 	<body>
-	    <div class ="navbar navbar-default" role="navigation" >
+	    <div class="navbar navbar-default" role="navigation" >
 	        <div class="navbar-header">
 	            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 	                <span class="sr-only">Toggle navigation</span>
@@ -52,7 +52,7 @@
 		
 	    <div class="container theme-showcase">
 	    <div class="page-header">
-	          <h1>Result</h1>
+	          <h1>Results</h1>
 	    </div>
 
         <div class="row">
